@@ -175,9 +175,10 @@ var CloudCommander, Util, DOM;
                             
                         case KEY.SPACE:
                             var lSelected   = DOM.isSelected(lCurrent),
-                                lDir        = DOM.isCurrentIsDir(lCurrent);
+                                lDir        = DOM.isCurrentIsDir(lCurrent),
+                                lName       = DOM.getCurrentName(lCurrent);
                             
-                            if(!lDir)
+                            if(!lDir || lName === '..')
                                 lSelected = true;
                                 
                             Util.ifExec(lSelected, function(){
